# Trading-Journal

./: .gitignore  LICENSE  Makefile  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/admin/: dao.py  resource.py  utils.py
backend/app/admin/templates/admin/: 404.html  base.html  dashboard.html  delete_confirm.html  detail.html  form.html  list.html  (+1 more)
backend/app/admin/views/: forms.py  resource_create.py  resource_delete.py  resource_detail.py  resource_edit.py
backend/app/admin_resources/: users.py
backend/app/application/bus/: command_bus.py  query_bus.py
backend/app/application/read_models/: user_read_model.py
backend/app/domain/entities/: base.py  user.py
backend/app/domain/value_objects/: base.py
backend/app/infrastructure/: config.py  errors.py
backend/app/infrastructure/db/: migrations.py  unit_of_work.py
backend/app/interfaces/dependencies/: container.py
backend/app/interfaces/pipeline/: flows.py
backend/deploy/dev/: .env.dev.example  docker-compose.yml
backend/deploy/local/: .env.local.example  docker-compose.yml
backend/deploy/prod/: .env.prod.example  docker-compose.yml
backend/deploy/stage/: docker-compose.yml
backend/sql/migrations/: 000_create_users_table.sql
backend/tests/contract/: test_docs.py  test_errors.py  test_health.py
backend/tests/integration/: test_sql_registry.py
backend/tests/integration/test_admin/: conftest.py
backend/tests/unit/: test_bus_registration.py  test_domain_purity.py  test_user_repository.py
backend/tests/unit/test_admin/: test_resource.py
(+12 files in other folders)
